--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "@types/nodemailer": "^7.0.9",
+    "bcryptjs": "^3.0.3",
     "next": "16.1.3",
+    "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.13",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
