--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "@types/leaflet": "^1.9.21",
     "@types/nodemailer": "^7.0.9",
     "bcryptjs": "^3.0.3",
+    "leaflet": "^1.9.4",
     "next": "16.1.3",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.13",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
