--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/leaflet": "^1.9.21",
     "@types/nodemailer": "^7.0.9",
     "bcryptjs": "^3.0.3",
+    "ioredis": "^5.9.3",
     "leaflet": "^1.9.4",
     "next": "16.1.3",
     "next-auth": "^4.24.13",
